--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>2D Canvas Game Library</title>
-		<script src="game.js" type="text/javascript"></script>
+		<script src="js/game.js" type="text/javascript"></script>
+		<script src="main.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<canvas id="screen"></canvas>
-		<script src="main.js" type="text/javascript"></script>
+
 	</body>
 </html>
