--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>2D Canvas Game Library by github.com/zachdyer</title>
-		<script src="js/game.js" type="text/javascript"></script>
+		<script src="js/gameLibrary.js" type="text/javascript"></script>
 		<script src="js/main.js" type="text/javascript"></script>
 	</head>
 	<body>
