--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <script type="module">
-    import Game from './js/Game.js'
+    import Game from './js/game.js'
     var game = new Game({
       debug: true
     })
